Fix truncated spanish (#265)

--- a/ddp-workspace/projects/ddp-testboston/src/style/activity.scss
+++ b/ddp-workspace/projects/ddp-testboston/src/style/activity.scss
@@ -297,9 +297,23 @@ ddp-activity-boolean-answer {
 
 .date-field {
     .mat-form-field-label {
-        font-size: 18px !important;
+        font-size: 20px !important;
         font-weight: 700 !important;
         color: mat-color($app-theme, 700) !important;
+        text-overflow: unset !important;
+        overflow: initial !important;
+    }
+
+    .mat-form-field-label-wrapper {
+        overflow: initial !important;
+    }
+}
+
+@media only screen and (max-width:380px) {
+    .date-field {
+        .mat-form-field-label {
+            font-size: 16px !important;
+        }
     }
 }
 
